# PMDL_SphereDrawer

./: CMakeLists.txt
resources/shaders/: FragmentShader.fs  VertexShader.vs
source/: main.cpp
source/Renderer/: ShaderProgram.cpp  ShaderProgram.h
source/ResourceMan/: ResourceManager.cpp  ResourceManager.h
